--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,13 @@ management.endpoint.prometheus.enabled=true
 spring.profiles.active=local
 
 
+
+
+spring.application.name=gym-app-microservice
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+
